--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,9 +1,15 @@
 header {
-    background: white url("/images/logo.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: 20px;
-    height: 70px;
     width: 100%;
+    background-color: white;
+    height: 70px;
     border-bottom: 1px solid #CCCCCC;
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    width: 142px;
+    height: 60px;
+    background: url("../images/logo.png") no-repeat center;
+    padding-left: 20px;
 }
